--pruebas de salvado

--- a/tarea1.ipynb
+++ b/tarea1.ipynb
@@ -78,7 +78,7 @@
         "id": "bBRl7VGfALex"
       },
       "source": [
-        "!mkdir data"
+        "#!mkdir data"
       ],
       "execution_count": null,
       "outputs": []
